INCLUDES += -I$(srcdir)/../ascent-shared -I$(srcdir)/../../extras/dep/src/g3dlite -I$(srcdir)/../../extras/dep/src/recast -I$(srcdir)/../../extras/dep/src/detour
INCLUDES += -I$(srcdir)/../../extras/dep/src/g3dlite

bin_PROGRAMS = ascent-world

ascent_world_SOURCES = \
../../extras/dep/src/detour/DetourAlloc.cpp \
../../extras/dep/src/detour/DetourAlloc.h \
../../extras/dep/src/detour/DetourAssert.h \
../../extras/dep/src/detour/DetourCommon.cpp \
../../extras/dep/src/detour/DetourCommon.h \
../../extras/dep/src/detour/DetourNavMesh.cpp \
../../extras/dep/src/detour/DetourNavMesh.h \
../../extras/dep/src/detour/DetourNavMeshBuilder.cpp \
../../extras/dep/src/detour/DetourNavMeshBuilder.h \
../../extras/dep/src/detour/DetourNavMeshQuery.cpp \
../../extras/dep/src/detour/DetourNavMeshQuery.h \
../../extras/dep/src/detour/DetourNode.cpp \
../../extras/dep/src/detour/DetourNode.h \
../../extras/dep/src/detour/DetourObstacleAvoidance.cpp \
../../extras/dep/src/detour/DetourObstacleAvoidance.h \
../../extras/dep/src/g3dlite/AABox.cpp \
../../extras/dep/src/g3dlite/Any.cpp \
../../extras/dep/src/g3dlite/BinaryFormat.cpp \
../../extras/dep/src/g3dlite/BinaryInput.cpp \
../../extras/dep/src/g3dlite/BinaryOutput.cpp \
../../extras/dep/src/g3dlite/Box.cpp \
../../extras/dep/src/g3dlite/Capsule.cpp \
../../extras/dep/src/g3dlite/CollisionDetection.cpp \
../../extras/dep/src/g3dlite/CoordinateFrame.cpp \
../../extras/dep/src/g3dlite/Crypto.cpp \
../../extras/dep/src/g3dlite/Cylinder.cpp \
../../extras/dep/src/g3dlite/debugAssert.cpp \
../../extras/dep/src/g3dlite/fileutils.cpp \
../../extras/dep/src/g3dlite/format.cpp \
../../extras/dep/src/g3dlite/g3dfnmatch.cpp \
../../extras/dep/src/g3dlite/g3dmath.cpp \
../../extras/dep/src/g3dlite/Line.cpp \
../../extras/dep/src/g3dlite/LineSegment.cpp \
../../extras/dep/src/g3dlite/Log.cpp \
../../extras/dep/src/g3dlite/Matrix.cpp \
../../extras/dep/src/g3dlite/Matrix3.cpp \
../../extras/dep/src/g3dlite/Matrix4.cpp \
../../extras/dep/src/g3dlite/MemoryManager.cpp \
../../extras/dep/src/g3dlite/Plane.cpp \
../../extras/dep/src/g3dlite/prompt.cpp \
../../extras/dep/src/g3dlite/Quat.cpp \
../../extras/dep/src/g3dlite/Random.cpp \
../../extras/dep/src/g3dlite/Ray.cpp \
../../extras/dep/src/g3dlite/ReferenceCount.cpp \
../../extras/dep/src/g3dlite/RegistryUtil.cpp \
../../extras/dep/src/g3dlite/Sphere.cpp \
../../extras/dep/src/g3dlite/stringutils.cpp \
../../extras/dep/src/g3dlite/System.cpp \
../../extras/dep/src/g3dlite/TextInput.cpp \
../../extras/dep/src/g3dlite/TextOutput.cpp \
../../extras/dep/src/g3dlite/Triangle.cpp \
../../extras/dep/src/g3dlite/UprightFrame.cpp \
../../extras/dep/src/g3dlite/Vector2.cpp \
../../extras/dep/src/g3dlite/Vector3.cpp \
../../extras/dep/src/g3dlite/Vector4.cpp \
../../extras/dep/src/recast/Recast.cpp \
../../extras/dep/src/recast/Recast.h \
../../extras/dep/src/recast/RecastAlloc.cpp \
../../extras/dep/src/recast/RecastAlloc.h \
../../extras/dep/src/recast/RecastArea.cpp \
../../extras/dep/src/recast/RecastAssert.h \
../../extras/dep/src/recast/RecastContour.cpp \
../../extras/dep/src/recast/RecastFilter.cpp \
../../extras/dep/src/recast/RecastMesh.cpp \
../../extras/dep/src/recast/RecastMeshDetail.cpp \
../../extras/dep/src/recast/RecastRasterization.cpp \
../../extras/dep/src/recast/RecastRegion.cpp \
AchievementInterface.cpp \
AchievementInterface.h \
AddonMgr.cpp \
AddonMgr.h \
AIAHealSupport.cpp \
AIAHealSupport.h \
AIInterface.cpp \
AIInterface.h \
AlteracValley.cpp \
AlteracValley.h \
ArathiBasin.cpp \
ArathiBasin.h \
AreaTrigger.cpp \
AreaTrigger.h \
Arenas.cpp \
Arenas.h \
ArenaTeam.cpp \
ArenaTeam.h \
AuctionHouse.cpp \
AuctionHouse.h \
AuctionMgr.cpp \
AuctionMgr.h \
BaseConsole.h \
BattlegroundHandler.cpp \
BattlegroundMgr.cpp \
BattlegroundMgr.h \
CConsole.cpp \
CConsole.h \
CellHandler.h \
Channel.cpp \
Channel.h \
ChannelHandler.cpp \
ChannelMgr.h \
CharacterHandler.cpp \
Chat.cpp \
Chat.h \
ChatHandler.cpp \
CollideInterface.cpp \
CollideInterface.h \
CombatHandler.cpp \
Commands.cpp \
ConsoleCommands.cpp \
ConsoleCommands.h \
ConsoleListener.cpp \
Const.h \
Container.cpp \
Container.h \
Corpse.cpp \
Corpse.h \
Creature.cpp \
Creature.h \
DatabaseCleaner.cpp \
DatabaseCleaner.h \
DayWatcherThread.cpp \
DayWatcherThread.h \
DuelHandler.cpp \
DynamicObject.cpp \
DynamicObject.h \
EventableObject.cpp \
EventableObject.h \
EventMgr.cpp \
EventMgr.h \
EyeOfTheStorm.cpp \
EyeOfTheStorm.h \
faction.cpp \
faction.h \
GameObject.cpp \
GameObject.h \
GMSecurity.cpp \
GMSecurity.h \
GMTicket.cpp \
Group.cpp \
Group.h \
GroupHandler.cpp \
Guild.cpp \
Guild.h \
GuildHandler.cpp \
HonorHandler.cpp \
HonorHandler.h \
IA_Waad/AI_Speak.cpp \
IA_Waad/AI_Speak.h \
IA_Waad/Tokenizer.cpp \
IA_Waad/Tokenizer.h \
Item.cpp \
Item.h \
ItemHandler.cpp \
ItemInterface.cpp \
ItemInterface.h \
ItemPrototype.h \
LfgHandler.cpp \
LfgMgr.cpp \
LfgMgr.h \
LocalizationMgr.cpp \
LocalizationMgr.h \
LogonCommClient.cpp \
LogonCommClient.h \
LogonCommHandler.h \
LogonCommHandler.cpp \
LootMgr.cpp \
LootMgr.h \
MailSystem.cpp \
MailSystem.h \
Main.cpp \
Map.cpp \
Map.h \
MapCell.cpp \
MapCell.h \
MapMgr.cpp \
MapMgr.h \
MapScriptInterface.cpp \
MapScriptInterface.h \
Master.cpp \
Master.h \
MiscHandler.cpp \
MiscHandler.h \
MovementHandler.cpp \
Misc/SpellParser.cpp \
Misc/SpellParser.h \
NameTables.h \
NPCHandler.cpp \
NPCHandler.h \
Object.cpp \
Object.h \
ObjectMgr.cpp \
ObjectMgr.h \
ObjectStorage.cpp \
ObjectStorage.h \
Opcodes.cpp \
Opcodes.h \
PathFinding/Pathfinding.cpp \
PathFinding/Pathfinding.h \
Pet.cpp \
Pet.h \
PetHandler.cpp \
Player.cpp \
Player.h \
PlayerPacketWrapper.cpp \
PointerLogger.cpp \
PointerLogger.h \
PvPZones.cpp \
PvPZones.h \
PvPZones/Halaa.cpp \
PvPZones/Halaa.h \
PvPZones/ZoneHellfirePeninsula.cpp \
PvPZones/ZoneHellfirePeninsula.h \
PvPZones/ZoneTerokkarForest.cpp \
PvPZones/ZoneTerokkarForest.h \
PvPZones/ZoneZangarmarsh.cpp \
PvPZones/ZoneZangarmarsh.h \
QueryHandler.cpp \
Quest.cpp \
Quest.h \
QuestHandler.cpp \
QuestMgr.cpp \
QuestMgr.h \
RaidHandler.cpp \
ReputationHandler.cpp \
ScriptMgr.cpp \
ScriptMgr.h \
SharedEnums.h \
Skill.h \
SkillHandler.cpp \
SocialHandler.cpp \
Spell.cpp \
Spell.h \
SpellAuras.cpp \
SpellAuras.h \
SpellEffects.cpp \
SpellFixes.cpp \
SpellHandler.cpp \
SpellTarget.cpp \
Stats.cpp \
Stats.h \
StdAfx.cpp \
StdAfx.h \
StrandOfTheAncients.cpp \
StrandOfTheAncients.h \
TaxiHandler.cpp \
TaxiMgr.cpp \
TaxiMgr.h \
TerrainMgr.cpp \
TerrainMgr.h \
TradeHandler.cpp \
TransporterHandler.cpp \
TransporterHandler.h \
Unit.cpp \
Unit.h \
UpdateFields.h \
UpdateMask.h \
Vehicle.cpp \
Vehicle.h \
vmap/BIH.cpp \
vmap/BIH.h \
vmap/IVMapManager.h \
vmap/MapTree.cpp \
vmap/MapTree.h \
vmap/ModelInstance.cpp \
vmap/ModelInstance.h \
vmap/TileAssembler.cpp \
vmap/TileAssembler.h \
vmap/VMapDefinitions.h \
vmap/VMapFactory.cpp \
vmap/VMapFactory.h \
vmap/VMapManager2.cpp \
vmap/VMapManager2.h \
vmap/VMapTools.h \
vmap/WorldModel.cpp \
vmap/WorldModel.h \
VoiceChatClientSocket.cpp \
VoiceChatClientSocket.h \
VoiceChatHandler.cpp \
VoiceChatHandler.h \
WarsongGulch.cpp \
WarsongGulch.h \
WayPoints.cpp \
WeatherMgr.cpp \
WeatherMgr.h \
WordFilter.cpp \
WordFilter.h \
WorldIrcRelay/WaadIrcRelay.cpp \
WorldIrcRelay/WaadIrcRelay.h \
World.cpp \
World.h \
WorldAnnounce.cpp \
WorldAnnounce.h \
WorldCreator.cpp \
WorldCreator.h \
WorldRunnable.cpp \
WorldRunnable.h \
WorldSession.cpp \
WorldSession.h \
WorldSocket.cpp \
WorldSocket.h \
WorldState.cpp \
WorldState.h \
WorldStateManager.cpp \
WorldStateManager.h 


ascent_world_LDADD = -lshared -lz -lpcre

ascent_world_LDFLAGS = -L$(srcdir)/../ascent-shared \
               -L$(srcdir)/../../extras/dep/src/g3dlite \
               -L/usr/lib \
               @LIB_EXPORT@
