INCLUDES = -I$(top_srcdir)/src/ascent-logonserver \
   -I$(top_srcdir)/src/ascent-realmserver -I$(top_srcdir)/src/ascent-shared -I$(top_srcdir)/src/ascent-voicechat \
   -I$(top_srcdir)/src/ascent-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src
INCLUDES += -I$(srcdir)/../../../../extras/dep/src/g3dlite -I$(srcdir)/../../../ascent-world/vmap


AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libWaadFunScripts.la

libWaadAlterac_la_SOURCES = Setup.cpp \
L80etc.cpp \
MountStone.cpp \
NPCInfoServeur.cpp \
NPCTeleporteur.cpp \
PNJ_Assistance.cpp \
PNJ_DJ.cpp \
PNJ_PvpTitle.cpp \
Portals.cpp \
PvPToken.cpp \
The_poule.cpp






