INCLUDES = -I$(top_srcdir)/src/ascent-logonserver \
   -I$(top_srcdir)/src/ascent-realmserver -I$(top_srcdir)/src/ascent-shared -I$(top_srcdir)/src/ascent-voicechat \
   -I$(srcdir)/../../../../extras/dep/src/g3dlite -I$(srcdir)/../../../ascent-world/vmap \
   -I$(top_srcdir)/src/ascent-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libWaadGossipScripts.la

libWaadGossipScripts_la_SOURCES = Setup.cpp\
Gossip_Battlemaster.cpp \
Gossip_DarkmoonFaire.cpp \
Gossip_Guard.cpp \
Gossip_Innkeepers.cpp \
Gossip_Moonglade.cpp \
Gossip_Mulgore.cpp \
Gossip_Shattrath.cpp \
Gossip_Stormwind.cpp \
Gossip_Tanaris.cpp \
Gossip_Trainer.cpp \
Gossip_Vendor.cpp 
