INCLUDES = -I$(top_srcdir)/src/ascent-logonserver \
   -I$(top_srcdir)/src/ascent-realmserver -I$(top_srcdir)/src/ascent-shared -I$(top_srcdir)/src/ascent-voicechat \
   -I$(top_srcdir)/src/ascent-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src
INCLUDES += -I$(srcdir)/../../../../extras/dep/src/g3dlite -I$(srcdir)/../../../ascent-world/vmap

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libSunInstanceScripts.la

libSunInstanceScripts_la_SOURCES = Setup.cpp \
Base.cpp \
Event_DarkPortal.cpp \
GenericAI.cpp \
Instance_Arcatraz.cpp \
Instance_AuchenaiCrypts.cpp \
Instance_AzjolNerub.cpp \
Instance_BlackMorass.cpp \
Instance_BlackrockDepths.cpp \
Instance_BlackrockSpire.cpp \
Instance_BloodFurnace.cpp \
Instance_Botanica.cpp \
Instance_Deadmines.cpp \
Instance_DireMaul.cpp \
Instance_HallsOfStone.cpp \
Instance_HellfireRamparts.cpp \
Instance_MagistersTerrace.cpp \
Instance_ManaTombs.cpp \
Instance_Mauradon.cpp \
Instance_OldHillsbradFoothills.cpp \
Instance_RagefireChasm.cpp \
Instance_RazorfenDowns.cpp \
Instance_ScarletMonastery.cpp \
Instance_Scholomance.cpp \
Instance_SethekkHalls.cpp \
Instance_ShadowfangKeep.cpp \
Instance_ShadowLabyrinth.cpp \
Instance_TheMechanar.cpp \
Instance_TheShatteredHalls.cpp \
Instance_TheSlavePens.cpp \
Instance_TheSteamvault.cpp \
Instance_TheStockade.cpp \
Instance_TheUnderbog.cpp \
Instance_Uldaman.cpp \
Instance_WailingCaverns.cpp \
Instance_ZulFarrak.cpp \
Raid_BlackTemple.cpp \
Raid_BlackwingLair.cpp \
Raid_CoT_BattleOfMountHyjal.cpp \
Raid_GruulsLair.cpp \
Raid_Karazhan.cpp \
Raid_Magtheridons_Lair.cpp \
Raid_MoltenCore.cpp \
Raid_Naxxramas.cpp \
Raid_OnyxiasLair.cpp \
Raid_SerpentshrineCavern.cpp \
Raid_SunwellPlateau.cpp \
Raid_TheEye.cpp \
Raid_WorldBosses.cpp \
Raid_ZulAman.cpp \
Raid_ZulGurub.cpp 

