INCLUDES = -I$(top_srcdir)/src/ascent-logonserver \
   -I$(top_srcdir)/src/ascent-realmserver -I$(top_srcdir)/src/ascent-shared -I$(top_srcdir)/src/ascent-voicechat \
   -I$(top_srcdir)/src/ascent-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src
INCLUDES += -I$(srcdir)/../../../../extras/dep/src/g3dlite -I$(srcdir)/../../../ascent-world/vmap

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libSunQuestScripts.la

libSunQuestScripts_la_SOURCES = Setup.cpp \
../InstanceScripts/Base.cpp \
ArathiHighlands.cpp \
Azshara.cpp \
Azuremyst_Isle.cpp \
Bassin_de_sholazar.cpp \
BladeEdge_Mountains.cpp \
BlastedLands.cpp \
BloodmystIsle.cpp \
Dalaran.cpp \
Darkshore.cpp \
Desolace.cpp \
Desolation_des_dragons.cpp \
Druid.cpp \
Duskwood.cpp \
Dustwallow_Marsh.cpp \
Eastern_Plaguelands.cpp \
EversongWoods.cpp \
FirstAid.cpp \
Fjordhurlant.cpp \
Foret_du_chant_de_cristal.cpp \
Ghostlands.cpp \
Hellfire_Peninsula.cpp \
HillsbradFoothills.cpp \
Isle_of_QuelDanas.cpp \
Jougdhiver.cpp \
La_couronne_de_glace.cpp \
Les_grisonnes.cpp \
Les_pics_foudroyes.cpp \
LochModan.cpp \
Mage.cpp \
Mulgore.cpp \
Nagrand.cpp \
Netherstorm.cpp \
Old_Hillsbrad.cpp \
Paladin.cpp \
QuestGossip.cpp \
QuestHooks.cpp \
Quete_epreuve_legion.cpp \
Quete_livre_des_Anciens.cpp \
RedridgeMountains.cpp \
Scarlet_enclave.cpp \
Shadowmoon.cpp \
SilvermoonCity.cpp \
Silverpine_Forest.cpp \
Stormwind.cpp \
StranglethornVale.cpp \
Tanaris.cpp \
Teldrassil.cpp \
Terrokar_Forest.cpp \
The_Barrens.cpp \
ThousandNeedles.cpp \
TirisfalGlades.cpp \
Toundra_Boreenne.cpp \
Undercity.cpp \
UnGoro.cpp \
Unsorted.cpp \
Waad_Arikara.cpp \
Warrior.cpp \
Westfall.cpp \
Zangarmarsh.cpp \
Zenn_Foulhoof.cpp \
ZulDrak.cpp

