INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../ascent-shared
INCLUDES += -I$(srcdir)/../../../../extras/dep/src/g3dlite -I$(srcdir)/../../../ascent-world/vmap
INCLUDES += -I$(srcdir)/../../../ascent-world -I$(srcdir)/../../../../dep/src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libWaadServerStatusPlugin.la

libWaadServerStatusPlugin_la_SOURCES = ServerStatusPlugin.cpp
