INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../ascent-shared
INCLUDES += -I$(srcdir)/../../../ascent-world -I$(srcdir)/../../../../dep/src
INCLUDES += -I$(srcdir)/../../../../extras/dep/src/g3dlite -I$(srcdir)/../../../ascent-world/vmap

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libWaadSpellHandlers.la

libWaadSpellHandlers_la_SOURCES = Setup.cpp \
DeathKnightSpells.cpp \
DruidSpells.cpp \
HunterSpells.cpp \
ItemSpells_1.cpp \
MageSpells.cpp \
OldSpellCPPStuff.cpp \
PaladinSpells.cpp \
PriestSpells.cpp \
Raid_BlackTemple.cpp \
RogueSpells.cpp \
ShamanSpells.cpp \
SpellNameId.h \
WarlockSpells.cpp \
WarriorSpells.cpp 

